# rustystart

./: Cargo.toml  README.md  rustnote.txt  todo.txt
.cargo/: config.toml
adder/src/: lib.rs
adder/tests/: integration_test.rs
adder/tests/common/: mod.rs
restaurant/: libnote.txt
restaurant/src/: front_of_house.rs  lib.rs
restaurant/src/front_of_house/: hosting.rs
src/: lib.rs  main.rs
src/bigtopics/: mod.rs  rustbigtopics.rs  rustgenerics.rs  rustlifetimes.rs  rusttraits.rs
src/collections/: common_collections.rs  mod.rs
src/concepts/: common_concepts.rs  mod.rs
src/errhandling/: errhandling.rs  errhandling2.rs  hello.txt  mod.rs
src/manage/: manage.rs
src/miniprojects/: guessing_game.rs  list_of_names.rs  mememo.rs  mod.rs  tempconv.rs
src/ownership/: mod.rs  ownborrow.rs
src/structure/: structure.rs
src/test/: test_functions.rs
