workspace = { members = [ "adder","restaurant"] }
[package]
name = "rustystart"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
# this is only a local unpublished lib
restaurant = { path = "./restaurant" }
unicode-segmentation = "1.11.0"
adder = { path = "./adder" }